--- a/css/styles.css
+++ b/css/styles.css
@@ -123,6 +123,9 @@ color: #404bbf;
 .contact:hover{
     color: #404bbf;
 }
+.contact:focus{
+    color: #404bbf ;
+}
 .btn{
 font-family: 'Roboto', sans-serif;
 font-weight: 500;
